# zealmap-open-qgis-fx

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  README.zh-CN.md
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt  README.md
core/src/: CQRulerBarGraphicsView.cpp  CQRulerBarGraphicsView.h  mainwindow.cpp  mainwindow.h  qgsappmaptools.cpp  qgsappmaptools.h  qgscanvasrefreshblocker.cpp  qgscanvasrefreshblocker.h  qgsstatusbarcoordinateswidget.cpp  qgsstatusbarcoordinateswidget.h  qgsstatusbarscalewidget.cpp  qpartiallycheckedtreeitemmodel.cpp  qpartiallycheckedtreeitemmodel.h  qsmapapp.cpp  qsmappluginmanager.cpp  qsmappluginmanager.h  qsmapprojectview.cpp  qsmapprojectviewitemdelegate.cpp  qsmapprojectviewitemdelegate.h
core/src/qtpropertybrowser/: qtbuttonpropertybrowser.cpp  qtpropertybrowser.cpp  qttreepropertybrowser.cpp
core/src/simpleini/: QSimpleIni.h  SimpleIni.h
core/ui/: mainwindow.ui
include/: qsmapapi.h  qsmapapp.h  qsmapprojectview.h  qtpropertybrowser.h  qtvariantproperty.h
plugs/: CMakeLists.txt
plugs/plug_example/: CMakeLists.txt
plugs/plug_example/src/: QgsXyzConnectionUtils.cpp  QgsXyzConnectionUtils.h  dllmain.cpp  dllqgsproviderguimetadata.cpp  dllqgsproviderguimetadata.h  qsmapexampleui.cpp  qsmapexampleui.h
plugs/plug_example/ui/: qsmapdialog.ui
